--- a/djeca_kofera/index.html
+++ b/djeca_kofera/index.html
@@ -30,22 +30,42 @@
             </ul>
           </nav>
           <div class="search">
-            <a href="#"><img src="img/search.png" alt="" /></a>
+            <a href="#"><img src="img/icon.png" alt="" /></a>
           </div>
         </div>
       </div>
 
       <div class="header-container">
-        <div class="header1">
-          <h1>Djeca kofera</h1>
+        <div class="naslovi">
+          <div class="header1">
+            <h1>Djeca kofera</h1>
+          </div>
+          <div class="header2">
+            <h3>Projekt o obitelji i</h3>
+          </div>
+          <div class="header3">
+            <h2>Odnosima</h2>
+          </div>
         </div>
-        <div class="header2">
-          <h3>Projekt o obitelji i</h3>
-        </div>
-        <div class="header3">
-          <h2>Odnosima</h2>
-        </div>
+        <div id="header_img"><img src="img/vizual1.png" alt="" /></div>
       </div>
     </header>
+
+    <div class="nastanak">
+      <div class="tekst">
+        <h1>Nastanak</h1>
+        <p class="razmak">
+          Projekt je nastao u sklopu programa LIons Quest „ Društveno korisno učenje“.
+        </p>
+        <p>
+          Lions Quest je sveobuhvatan program namijenjen pozi- tivnom razvoju djece i
+          mladih i preventivni program za učenike osnovne i srednje škole. Ovaj program
+          okuplja obitelji, učenike i/ili nastavnike i članove zajednice kako bi pomogli
+          učenicima da razviju životne i građanske vještine unutar sigurnog, brižnog i
+          predvidivog okruženja.
+        </p>
+      </div>
+      <div class="ruke"><img src="img/vizual3.png" alt="" /></div>
+    </div>
   </body>
 </html>
